<resources>
    <string name="app_name">AppCommon</string>
    <string name="hello_world">hello_world</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="header_hint_refresh_normal">下拉可以刷新</string>
    <string name="header_hint_refresh_ready">松开可以刷新</string>
    <string name="header_hint_refresh_loading">正在刷新&#8230;</string>
    <string name="header_hint_refresh_time">更新于：</string>
    <string name="footer_hint_load_normal">查看更多</string>
    <string name="footer_hint_load_ready">松开载入更多</string>
    <string name="title_activity_next">NextActivity</string>

    <string name="customize">Customize</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="undo">Undo</string>

    <string name="monday">周一</string>
    <string name="thuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="add">你可以在此添加你的布局</string>

</resources>
